--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="home-hire">
                 <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
-                <button class="btn btn-outline">Hire Us</button>
+                <button class="btn btn-primary">Hire Us</button>
             </div>
         </div>
     </div>
