--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,6 +12,9 @@
                 <a href="#projects-section">PROJECTS</a>
             </li>
             <li>
+                <a href="#experience-section">EXPERIENCE</a>
+            </li>
+            <li>
                 <a href="#contact-section">CONTACT US</a>
             </li>
         </ul>
@@ -79,14 +82,14 @@
     <app-profile></app-profile>
 </div>
 
-<div class="home-section" #homeSection>
+<div class="home-section" #homeSection id="projects-section">
     <app-projects></app-projects>
 </div>
 
-<div class="home-section" #homeSection>
+<div class="home-section" #homeSection id="experience-section">
     <app-experience></app-experience>
 </div>
 
-<div class="home-section" #homeSection>
+<div class="home-section" #homeSection id="contact-section">
     <app-contact></app-contact>
 </div>
