--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -25,3 +25,11 @@
 .text-small {
     font-size: 12px;
 }
+
+.bg-green {
+    background-color: #304f2f;
+}
+
+.text-primary {
+    color: #ffffff;
+}
