--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,86 @@
-<p>contact works!</p>
+
+<div class="experience-container">
+    <div class="greeting text-blue">GET IN TOUCH</div>
+    <p class="fs-3 fw-bold my-3">Contact us</p>
+    <p class="text-secondary mb-3">Have a project in mind? We'd love to hear from you. Drop us a line and we'll get back to you as soon as possible.</p>
+    <div>
+        <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+            <div class="primary-border rounded p-3 w-100">
+                <div class="d-flex align-items-center gap-3">
+                    <i class="bi  bi-chat-left fs-5 text-blue"></i>
+                    <p class="text-x-large fw-bold text-white my-4">Send us a message</p>
+                </div>
+                <form>
+                    <div class="mb-3 text-start">
+                      <label class="form-label">Your Name</label>
+                      <input type="text" class="form-control bg-secondary">
+                      <!-- <div class="form-text text-secondary">We'll never share your email with anyone else.</div> -->
+                    </div>
+                    <div class="mb-3 text-start">
+                        <label class="form-label">Email Address</label>
+                        <input type="email" class="form-control bg-secondary">
+                        </div>
+                    <div class="mb-3 text-start">
+                        <label class="form-label">Company Name / Organization </label>
+                        <input type="text" class="form-control bg-secondary">
+                        </div>
+                    <div class="mb-3 text-start">
+                        <label class="form-label">Company Name / Organization</label>
+                        <ng-select [items]="projectType" 
+                            bindLabel="name" 
+                            bindValue="id">
+                        </ng-select>
+                    </div>
+                    <div class="mb-3 text-start">
+                        <label class="form-label">Project Budget</label>
+                        <ng-select [items]="projectBudget" 
+                            bindLabel="name" 
+                            bindValue="id">
+                        </ng-select>
+                    </div>
+                    <div class="mb-3 text-start">
+                        <label class="form-label">Your Message / Project Details </label>
+                        <textarea class="form-control bg-secondary" placeholder="Leave a comment here" rows="3"></textarea>
+                    </div>
+                    <!-- <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">Password</label>
+                      <input type="password" class="form-control bg-secondary" id="exampleInputPassword1">
+                    </div> -->
+                    <!-- <div class="mb-3 form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div> -->
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+            <div class="primary-border rounded p-3 primary-grad w-100 h-100">
+                <div class="d-flex align-items-center gap-3">
+                    <i class="bi bi-envelope fs-5 text-blue"></i>
+                    <p class="text-x-large fw-bold text-white my-4">Contact Information</p>
+                </div>
+                <div>
+                    <div class="mb-4 text-start">
+                        <p class="text-small text-secondary mb-2">Email us at</p>
+                        <p class="fw-bold text-white">contact.freelancerdevs&#64;gmail.com</p>
+                    </div>
+                    <div class="mb-4 text-start">
+                        <p class="text-small text-secondary mb-2">Call us at</p>
+                        <p class="fw-bold text-white">123456789</p>
+                    </div>
+                    <div class="mb-4 text-start">
+                        <p class="text-small text-secondary mb-2">Our location</p>
+                        <p class="fw-bold text-white">Hyderabad, India</p>
+                    </div>
+                    <div class="mb-4 text-start">
+                        <p class="text-small text-secondary mb-2">Working hours</p>
+                        <p class="fw-bold text-white">Mon - Fri: 9AM - 6PM PST</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
