"mobile view fix"

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
             <div class="masonry-item pb-5">
                 <div class="masonry-item-inner">
                     <div class="masonry-item-inner">
-                        <p class="text-x-large fw-bold text-white mb-4">freelancerdevs</p>
+                        <p class="text-x-large fw-bold text-white mb-4">Quick Links</p>
                         <div>
                             <ul class="gap-1 d-flex flex-column nav">
                                 <li>
@@ -32,7 +32,7 @@
             </div>
             <div class="masonry-item pb-5">
                 <div class="masonry-item-inner">
-                    <p class="text-x-large fw-bold text-white mb-4">freelancerdevs</p>
+                    <p class="text-x-large fw-bold text-white mb-4">Contact</p>
                     <div class="text-secondary">
                         <p class="mb-1">hello&#64;freelancerdevs.com</p>
                         <p class="mb-1">+1 (555) 123-4567</p>
