--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -39,51 +39,18 @@
 </div>
 
 <div class="home-section" #homeSection>
-    <div class="grid-masonry">
-        <div class="masonry-item">
-            <div class="masonry-item-inner">
-                <div class="card d-flex flex-column align-items-center w-200">
-                    <div class="card-icon">
-                        <img src="/assets/program.svg">
-                    </div>
-                    <div class="card-subtitle mt-3 mb-2">
-                        team of 8
-                    </div>
-                    <div class="card-title">
-                        Programmers
-                    </div>
-                </div>
-            </div>
+    <div class="d-flex flex-wrap text-center justify-content-center mx-auto gap-5">
+        <div>
+            <p class="fw-bold fs-3 mb-3">10 +</p>
+            <p class="text-secondary text-large">Team Members</p>
         </div>
-        <div class="masonry-item">
-            <div class="masonry-item-inner">
-                <div class="card d-flex flex-column align-items-center w-200">
-                    <div class="card-icon">
-                        <img src="/assets/experience.svg">
-                    </div>
-                    <div class="card-subtitle mt-3 mb-2">
-                        5 + years
-                    </div>
-                    <div class="card-title">
-                        Experience
-                    </div>
-                </div>
-            </div>
+        <div>
+            <p class="fw-bold fs-3 mb-3">5 +</p>
+            <p class="text-secondary text-large">Experience</p>
         </div>
-        <div class="masonry-item">
-            <div class="masonry-item-inner">
-                <div class="card d-flex flex-column align-items-center w-200">
-                    <div class="card-icon">
-                        <img src="/assets/design.svg">
-                    </div>
-                    <div class="card-subtitle mt-3 mb-2">
-                        10 + delivered
-                    </div>
-                    <div class="card-title">
-                        Projects
-                    </div>
-                </div>
-            </div>
+        <div>
+            <p class="fw-bold fs-3 mb-3">15 +</p>
+            <p class="text-secondary text-large">Projects completed</p>
         </div>
     </div>
 </div>
