--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -163,11 +163,22 @@
 
 @media (max-width: 480px) {
     .collage-container {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        height: auto;
     }
 
-    .collage-item-1 {
-        grid-column: span 1;
+    .collage-item {
+        height: 160px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .collage-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
