--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -131,3 +131,15 @@
 .primary-grad-bottom {
     background-image: linear-gradient(#14142a , transparent);
 }
+
+.h-200 {
+    height: 200px;
+}
+
+.badge-gray {
+    background-color:#2a2e36;
+    border-radius: 4px;
+    padding: 4px 8px;
+    font-size: 12px;
+    color: #b9b7b7;
+}
