--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,86 +5,105 @@
     <p class="text-secondary mb-3">Have a project in mind? We'd love to hear from you. Drop us a line and we'll get back to you as soon as possible.</p>
     <div>
         <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
-            <div class="primary-border rounded p-3 w-100">
-                <div class="d-flex align-items-center gap-3">
-                    <i class="bi  bi-chat-left fs-5 text-blue"></i>
-                    <p class="text-x-large fw-bold text-white my-4">Send us a message</p>
-                </div>
-                <form [formGroup]="contactForm">
-                    <div class="mb-3 text-start">
-                      <label class="form-label">Your Name</label>
-                      <input type="text" formControlName="name" class="form-control bg-secondary" placeholder="Example: John Doe">
-                      <!-- <div class="form-text text-secondary">We'll never share your email with anyone else.</div> -->
+            <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+                <div class="primary-border rounded p-3 w-100">
+                    <div class="d-flex align-items-center gap-3">
+                        <i class="bi  bi-chat-left fs-5 text-blue"></i>
+                        <p class="text-x-large fw-bold text-white my-4">Send us a message</p>
                     </div>
-                    <div class="mb-3 text-start">
-                        <label class="form-label">Email Address</label>
-                        <input type="email" formControlName="email" class="form-control bg-secondary" placeholder="Example: example@gmail.com">
-                    </div>
-                    <div class="mb-3 text-start">
-                        <label class="form-label">Phone Number</label>
-                        <input type="number" formControlName="phone" class="form-control bg-secondary" placeholder="Example: 0123456789">
-                    </div>
-                    <div class="mb-3 text-start">
-                        <label class="form-label">Company Name / Organization</label>
-                        <input type="text" formControlName="companyName" class="form-control bg-secondary" placeholder="Example: Acme Solutions">
-                    </div>
-                    <div class="mb-3 text-start">
-                        <label class="form-label">Project Type</label>
-                        <ng-select [items]="projectTypeList" 
-                            bindLabel="name" 
-                            bindValue="id"
-                            formControlName="projectType"
-                            placeholder="Select">
-                        </ng-select>
-                    </div>
-                    <div class="mb-3 text-start">
-                        <label class="form-label">Your Message / Project Details </label>
-                        <textarea class="form-control bg-secondary" formControlName="description" placeholder="Tell us about your project..." rows="3"></textarea>
-                    </div>
-                    <div class="mb-3 text-start">
-                        <label class="form-label">How Did You Hear About Us?</label>
-                        <ng-select [items]="discoveryList" 
-                            bindLabel="name" 
-                            bindValue="id"
-                            formControlName="discoveryType"
-                            (change)="onDiscoveryChange($event)"
-                            placeholder="Select">
-                        </ng-select>
-                    </div>
-                    <div class="mb-3 text-start" *ngIf="isDiscoveryOtherSelected">
-                        <input type="text" formControlName="discoveryTypeDescription" class="form-control bg-secondary" placeholder="Example: Instagram">
-                    </div>
-                    <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
-                </form>
-            </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
-            <div class="primary-border rounded p-3 primary-grad w-100 h-100">
-                <div class="d-flex align-items-center gap-3">
-                    <i class="bi bi-envelope fs-5 text-blue"></i>
-                    <p class="text-x-large fw-bold text-white my-4">Contact Information</p>
-                </div>
-                <div>
-                    <div class="mb-4 text-start">
-                        <p class="text-small text-secondary mb-2">Email us at</p>
-                        <p class="fw-bold text-white">contact.freelancerdevs&#64;gmail.com</p>
-                    </div>
-                    <div class="mb-4 text-start">
-                        <p class="text-small text-secondary mb-2">Call us at</p>
-                        <p class="fw-bold text-white">+91 8295309717</p>
-                    </div>
-                    <div class="mb-4 text-start">
-                        <p class="text-small text-secondary mb-2">Our location</p>
-                        <p class="fw-bold text-white">Hyderabad, India</p>
-                    </div>
-                    <div class="mb-4 text-start">
-                        <p class="text-small text-secondary mb-2">Working hours</p>
-                        <p class="fw-bold text-white">Mon - Fri: 9AM - 6PM PST</p>
-                    </div>
+                    <form [formGroup]="contactForm">
+                        <div class="mb-3 text-start">
+                            <label class="form-label">Your Name</label>
+                            <input type="text" formControlName="name" class="form-control bg-secondary" placeholder="Example: John Doe">
+                            <p class="mt-2" *ngFor="let validation of validationMessages.name">
+                                <span class="text-danger"
+                                    *ngIf="contactForm.get('name')?.hasError(validation.type) && (contactForm.get('name')?.dirty || contactForm.get('name')?.touched || submitted)">{{validation.message}}</span>
+                            </p>
+                        </div>
+                        <div class="mb-3 text-start">
+                            <label class="form-label">Email Address</label>
+                            <input type="email" formControlName="email" class="form-control bg-secondary" placeholder="Example: example@gmail.com">
+                            <p class="mt-2" *ngFor="let validation of validationMessages.email">
+                                <span class="text-danger"
+                                    *ngIf="contactForm.get('email')?.hasError(validation.type) && (contactForm.get('email')?.dirty || contactForm.get('email')?.touched || submitted)">{{validation.message}}</span>
+                            </p>
+                        </div>
+                        <div class="mb-3 text-start">
+                            <label class="form-label">Phone Number</label>
+                            <input type="number" formControlName="phone" class="form-control bg-secondary" placeholder="Example: 0123456789">
+                            <p class="mt-2" *ngFor="let validation of validationMessages.phone">
+                                <span class="text-danger"
+                                    *ngIf="contactForm.get('phone')?.hasError(validation.type) && (contactForm.get('phone')?.dirty || contactForm.get('phone')?.touched || submitted)">{{validation.message}}</span>
+                            </p>
+                        </div>
+                        <div class="mb-3 text-start">
+                            <label class="form-label">Company Name / Organization</label>
+                            <input type="text" formControlName="companyName" class="form-control bg-secondary" placeholder="Example: Acme Solutions">
+                        </div>
+                        <div class="mb-3 text-start">
+                            <label class="form-label">Project Type</label>
+                            <ng-select [items]="projectTypeList" 
+                                bindLabel="name" 
+                                bindValue="id"
+                                formControlName="projectType"
+                                placeholder="Select">
+                            </ng-select>
+                            <p class="mt-2" *ngFor="let validation of validationMessages.projectType">
+                                <span class="text-danger"
+                                    *ngIf="contactForm.get('projectType')?.hasError(validation.type) && (contactForm.get('projectType')?.dirty || contactForm.get('projectType')?.touched || submitted)">{{validation.message}}</span>
+                            </p>
+                        </div>
+                        <div class="mb-3 text-start">
+                            <label class="form-label">Your Message / Project Details </label>
+                            <textarea class="form-control bg-secondary" formControlName="description" placeholder="Tell us about your project..." rows="3"></textarea>
+                            <p class="mt-2" *ngFor="let validation of validationMessages.description">
+                                <span class="text-danger"
+                                    *ngIf="contactForm.get('description')?.hasError(validation.type) && (contactForm.get('description')?.dirty || contactForm.get('description')?.touched || submitted)">{{validation.message}}</span>
+                            </p>
+                        </div>
+                        <div class="mb-3 text-start">
+                            <label class="form-label">How Did You Hear About Us?</label>
+                            <ng-select [items]="discoveryList" 
+                                bindLabel="name" 
+                                bindValue="id"
+                                formControlName="discoveryType"
+                                (change)="onDiscoveryChange($event)"
+                                placeholder="Select">
+                            </ng-select>
+                        </div>
+                        <div class="mb-3 text-start" *ngIf="isDiscoveryOtherSelected">
+                            <input type="text" formControlName="discoveryTypeDescription" class="form-control bg-secondary" placeholder="Example: Instagram">
+                        </div>
+                        <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+                    </form>
                 </div>
             </div>
-        </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+                <div class="primary-border rounded p-3 primary-grad w-100 h-100">
+                    <div class="d-flex align-items-center gap-3">
+                        <i class="bi bi-envelope fs-5 text-blue"></i>
+                        <p class="text-x-large fw-bold text-white my-4">Contact Information</p>
+                    </div>
+                    <div>
+                        <div class="mb-4 text-start">
+                            <p class="text-small text-secondary mb-2">message us at</p>
+                            <p class="fw-bold text-white">contact.freelancerdevs&#64;gmail.com</p>
+                        </div>
+                        <div class="mb-4 text-start">
+                            <p class="text-small text-secondary mb-2">Call us at</p>
+                            <p class="fw-bold text-white">+91 8295309717</p>
+                        </div>
+                        <div class="mb-4 text-start">
+                            <p class="text-small text-secondary mb-2">Our location</p>
+                            <p class="fw-bold text-white">Hyderabad, India</p>
+                        </div>
+                        <div class="mb-4 text-start">
+                            <p class="text-small text-secondary mb-2">Working hours</p>
+                            <p class="fw-bold text-white">Mon - Fri: 9AM - 6PM PST</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
