--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -38,35 +38,37 @@
     <app-home></app-home>
 </div>
 
-<div class="home-section" #homeSection>
-    <div class="d-flex flex-wrap text-center justify-content-center mx-auto gap-5">
-        <div>
-            <p class="fw-bold fs-3 mb-3">10 +</p>
-            <p class="text-secondary text-large">Team Members</p>
-        </div>
-        <div>
-            <p class="fw-bold fs-3 mb-3">5 +</p>
-            <p class="text-secondary text-large">Experience</p>
-        </div>
-        <div>
-            <p class="fw-bold fs-3 mb-3">15 +</p>
-            <p class="text-secondary text-large">Projects completed</p>
+<div class="app-container">
+    <div class="home-section" #homeSection>
+        <div class="d-flex flex-wrap text-center justify-content-center mx-auto gap-5">
+            <div>
+                <p class="fw-bold fs-3 mb-3">10 +</p>
+                <p class="text-secondary text-large">Team Members</p>
+            </div>
+            <div>
+                <p class="fw-bold fs-3 mb-3">5 +</p>
+                <p class="text-secondary text-large">Experience</p>
+            </div>
+            <div>
+                <p class="fw-bold fs-3 mb-3">15 +</p>
+                <p class="text-secondary text-large">Projects completed</p>
+            </div>
         </div>
     </div>
-</div>
-
-<div class="home-section" #homeSection id="profile-section">
-    <app-profile></app-profile>
-</div>
-
-<div class="home-section" #homeSection id="projects-section">
-    <app-projects></app-projects>
-</div>
-
-<div class="home-section" #homeSection id="experience-section">
-    <app-experience></app-experience>
-</div>
-
-<div class="home-section" #homeSection id="contact-section">
-    <app-contact></app-contact>
+    
+    <div class="home-section" #homeSection id="profile-section">
+        <app-profile></app-profile>
+    </div>
+    
+    <div class="home-section" #homeSection id="projects-section">
+        <app-projects></app-projects>
+    </div>
+    
+    <div class="home-section" #homeSection id="experience-section">
+        <app-experience></app-experience>
+    </div>
+    
+    <div class="home-section" #homeSection id="contact-section">
+        <app-contact></app-contact>
+    </div>
 </div>
