--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,269 +1,25 @@
-
-<div class="experience-container">
-    <div class="greeting text-blue">Our Work</div>
-    <p class="fs-3 fw-bold my-3">Featured projects</p>
-    <p class="text-secondary mb-3">Explore our portfolio of recent projects showcasing our expertise in web development, mobile applications, and interactive experiences.</p>
-    <div class="mt-4">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="indigo-midnight-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 indigo-midnight-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Disteven</p>
-                        <p class="text-secondary mb-3">Disteven is your all-in-one solution for effortlessly managing groups, friends, expenses, and their resolutions.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">SCSS</div>
-                            <div class="badge-gray">Bootstrap</div>
-                            <div class="badge-gray">Angular</div>
-                            <div class="badge-gray">Node.js</div>
-                            <div class="badge-gray">MongoDB</div>
-                            <div class="badge-gray">Express</div>
-                        </div>
-                        <a href="https://app.disteven.com" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
+<div class="row">
+    <div *ngFor="let project of (showAllProjects ? projects : projects.slice(0, 3))" class="col-lg-4 col-md-6 col-sm-12 mb-5">
+        <div class="{{ project.borderClass }} rounded-3 overflow-hidden">
+            <div class="h-200 w-100 {{ project.gradientClass }}"></div>
+            <div class="p-4">
+                <div class="greeting text-blue mb-3">{{ project.category }}</div>
+                <p class="text-large fw-bold mb-3">{{ project.name }}</p>
+                <p class="text-secondary mb-3">{{ project.description }}</p>
+                <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
+                    <div *ngFor="let tech of project.technologies" class="badge-gray">{{ tech }}</div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="purple-magenta-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 purple-magenta-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Cipher Bay</p>
-                        <p class="text-secondary mb-3"> A secure platform for encrypting and decrypting text online.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">SCSS</div>
-                            <div class="badge-gray">Angular</div>
-                            <div class="badge-gray">Node.js</div>
-                            <div class="badge-gray">MongoDB</div>
-                            <div class="badge-gray">Express</div>
-                        </div>
-                        <a href="https://cipherbay.vercel.app/home" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="gray-emerald-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 gray-emerald-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Collatz Conjecture</p>
-                        <p class="text-secondary mb-3">A visualization of the Collatz Conjecture to explore mathematical patterns.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                            <div class="badge-gray">Node.js</div>
-                        </div>
-                        <a href="https://collatz-visual.netlify.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="green-cyan-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 green-cyan-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Colors Expo</p>
-                        <p class="text-secondary mb-3">A color palette exploration tool for designers and developers.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                        </div>
-                        <a href="https://find-colors.netlify.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="blue-violet-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 blue-violet-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Lottery Matching app</p>
-                        <p class="text-secondary mb-3">A random lottery number matcher for testing luck.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                        </div>
-                        <a href="https://lottery-js.netlify.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="indigo-midnight-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 indigo-midnight-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Pop It</p>
-                        <p class="text-secondary mb-3">A casual popping game for quick, addictive and relaxing gameplay.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                        </div>
-                        <a href="https://pop-game.netlify.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="purple-magenta-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 purple-magenta-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Quiz It</p>
-                        <p class="text-secondary mb-3">A fun and engaging quiz application for testing knowledge.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                        </div>
-                        <a href="https://quiz-jam.netlify.app/index.html" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="gray-emerald-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 gray-emerald-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">les papilles</p>
-                        <p class="text-secondary mb-3">A visually appealing food, restaurant and online ordering website.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                            <div class="badge-gray">Bootstrap</div>
-                        </div>
-                        <a href="https://les-papilles.netlify.app/#m" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="green-cyan-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 green-cyan-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Temperature Plot Chart</p>
-                        <p class="text-secondary mb-3">An interactive temperature plot chart to visualize yearly trends.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                        </div>
-                        <a href="https://yearly-temperature.netlify.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="blue-violet-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 blue-violet-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">URL Shortner</p>
-                        <p class="text-secondary mb-3">A simple and efficient URL shortener for quick link management.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                            <div class="badge-gray">Node.js</div>
-                            <div class="badge-gray">MongoDB</div>
-                            <div class="badge-gray">Express</div>
-                        </div>
-                        <a href="https://fexy.vercel.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="indigo-midnight-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 indigo-midnight-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Error Service</p>
-                        <p class="text-secondary mb-3">A random word generator for creative inspiration and brainstorming.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                        </div>
-                        <a href="https://wrng.netlify.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="purple-magenta-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 purple-magenta-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">To Do List</p>
-                        <p class="text-secondary mb-3">A simple and efficient to-do list web app for task management.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                        </div>
-                        <a href="https://manage-todo.netlify.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-5">
-                <div class="gray-emerald-border rounded-3 overflow-hidden">
-                    <div class="h-200 w-100 gray-emerald-grad"></div>
-                    <div class="p-4">
-                        <div class="greeting text-blue mb-3">Web Application</div>
-                        <p class="text-large fw-bold mb-3">Big Oven</p>
-                        <p class="text-secondary mb-3">A recipe and meal planning app to explore and manage cooking ideas easily.</p>
-                        <div class="d-flex align-items-center gap-3 mb-5 flex-wrap">
-                            <div class="badge-gray">HTML</div>
-                            <div class="badge-gray">CSS</div>
-                            <div class="badge-gray">JavaScript</div>
-                        </div>
-                        <a href="https://big-oven.netlify.app/" target="_blank" class="text-decoration-none">
-                            View project
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>  
-                </div>
+                <a [href]="project.link" target="_blank" class="text-decoration-none">
+                    View project
+                    <i class="bi bi-arrow-right"></i>
+                </a>
             </div>
         </div>
     </div>
+</div>
+
+<div class="text-center mt-4" *ngIf="projects.length > 3">
+    <button class="btn btn-primary" (click)="showAllProjects = !showAllProjects">
+        {{ showAllProjects ? 'Show Less Projects' : 'Show More Projects' }}
+    </button>
 </div>
