--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -19,7 +19,7 @@
 
     .bubble {
         position: absolute;
-        background: #201a3f; // Light Blue
+        background: #201a3f;
         border-radius: 50%;
         filter: blur(10px);
         opacity: 0.7;
