--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -39,24 +39,24 @@
                 <div class="masonry-item">
                     <div class="masonry-item-inner">
                         <div class="card text-start">
-                            <p class="text-x-large fw-bold text-white">Mobile Development</p>
-                            <p class="text-small text-secondary my-2">Native and cross-platform mobile applications for iOS and Android with seamless user experiences.</p>
+                            <p class="text-x-large fw-bold text-white">Digital Marketing</p>
+                            <p class="text-small text-secondary my-2">Result-driven digital marketing strategies to enhance brand visibility and engagement across multiple platforms.</p>
                             <div class="text-white">
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="bi bi-check2 fs-5 text-blue"></i>
-                                    <p>iOS & Android</p>
+                                    <p>SEO & SEM</p>
                                 </div>
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="bi bi-check2 fs-5 text-blue"></i>
-                                    <p>React Native</p>
+                                    <p>Social Media Marketing</p>
                                 </div>
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="bi bi-check2 fs-5 text-blue"></i>
-                                    <p>Swift & Kotlin</p>
+                                    <p>Content Marketing & Copywriting</p>
                                 </div>
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="bi bi-check2 fs-5 text-blue"></i>
-                                    <p>App Store optimization</p>
+                                    <p>Email Marketing & Automation</p>
                                 </div>
                             </div>
                         </div>
