--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -41,22 +41,8 @@
     <p class="fs-3 fw-bold my-3">A team of digital craftspeople</p>
     <p class="text-secondary">We're a diverse team of designers, developers, and strategists who are passionate about<br /> creating exceptional digital experiences that solve real problems.</p>
     <div class="approach-container">
-        <div class="collage-container">
-            <div class="collage-item collage-item-1">
-                <img src="/assets/images/image1.webp" alt="Collage Image 1">
-            </div>
-            <div class="collage-item collage-item-2">
-                <img src="/assets/images/image2.webp" alt="Collage Image 2">
-            </div>
-            <div class="collage-item collage-item-3">
-                <img src="/assets/images/image3.jpg" alt="Collage Image 3">
-            </div>
-            <div class="collage-item collage-item-4">
-                <img src="/assets/images/image4.webp" alt="Collage Image 4">
-            </div>
-            <div class="collage-item collage-item-5">
-                <img src="/assets/images/image5.webp" alt="Collage Image 5">
-            </div>
+        <div>
+            <img src="/assets/team.svg" class="h-100 w-100" />
         </div>
         <div class="approach-content">
             <p class="fs-4 fw-bold">Our approach</p>
