--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,11 @@
 <div class="row">
     <div *ngFor="let project of (showAllProjects ? projects : projects.slice(0, 3))" class="col-lg-4 col-md-6 col-sm-12 mb-5">
         <div class="{{ project.borderClass }} rounded-3 overflow-hidden">
-            <div class="h-200 w-100 {{ project.gradientClass }}"></div>
+            <div class="h-200 w-100 {{ project.gradientClass }} d-flex align-items-center justify-content-center">
+                <div class="h-80 w-80 bg-electric-blue rounded-circle d-flex align-items-center justify-content-center text-white fs-2">
+                    {{ getInitials(project.name) }}
+                </div>
+            </div>
             <div class="p-4">
                 <div class="greeting text-blue mb-3">{{ project.category }}</div>
                 <p class="text-large fw-bold mb-3">{{ project.name }}</p>
